# iskra-etl

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
scripts/: compare_st_gguf_cos.py  smoke_st_embed.py  split_chunks.py
src/iskra_etl/: __init__.py  splitter.py
tests/: test_splitter.py
